--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-    <a href="example.pdf" download="example.pdf">
+    <a href="https://drive.google.com/u/0/uc?id=1tJDcf-3iw7NlJ79Nf8H5kIouWykFihkE&export=download" download="example.pdf">
         <button>Download File</button>
     </a>
 
